--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -9,8 +9,8 @@ RUN apt-get update && \
     tar -xjf /usr/local/bin/manta-${MANTA_VERSION}.release_src.tar.bz2 && \
     sed -i 's/MAX_QSCORE = 70/MAX_QSCORE = 71/' /usr/local/bin/manta-${MANTA_VERSION}.release_src/src/c++/lib/blt_util/qscore_cache.hh && \
     mkdir /usr/local/bin/manta-${MANTA_VERSION}.release_src/build && cd /usr/local/bin/manta-${MANTA_VERSION}.release_src/build && \
-    mkdir -r /usr/local/bin/manta/bin && \
-    ../configure --jobs=4 --prefix=/usr/local/bin/manta && \
+    mkdir -p /usr/local/bin/manta/bin && \
+    ../configure --prefix=/usr/local/bin/manta && \
     make install
 
 WORKDIR /usr/local/bin/manta/bin
